--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     ],
     "main": "./src/extension.js",
     "contributes": {
-        "commands": [{
+        "commands": [
+            {
                 "command": "example.webview",
                 "title": "Example: WebView"
             },
@@ -36,14 +37,14 @@
         "test": "node ./node_modules/vscode/bin/test",
         "build": "npm run buildweb && vsce package",
         "buildext": "vsce package",
-        "buildweb": "cd ./web && { npm run build;cd -;}",
-        "startweb": "cd ./web && { npm run dev;cd -;}"
+        "buildweb": "cd ./app && yarn build && cd ..",
+        "start": "cd ./app && yarn start && cd .."
     },
     "devDependencies": {
-        "typescript": "^3.3.1",
+        "typescript": "^4.1.3",
         "vscode": "^1.1.28",
-        "eslint": "^5.13.0",
-        "@types/node": "^10.12.21",
-        "@types/mocha": "^2.2.42"
+        "eslint": "^7.16.0",
+        "@types/node": "^14.14.14",
+        "@types/mocha": "^8.2.0"
     }
 }
