--- a/package.json
+++ b/package.json
@@ -41,10 +41,14 @@
         "start": "cd ./app && yarn start && cd .."
     },
     "devDependencies": {
-        "typescript": "^4.1.3",
-        "vscode": "^1.1.28",
-        "eslint": "^7.16.0",
+        "@types/mocha": "^8.2.0",
         "@types/node": "^14.14.14",
-        "@types/mocha": "^8.2.0"
+        "eslint": "^7.16.0",
+        "typescript": "^4.1.3",
+        "vscode": "^1.1.28"
+    },
+    "dependencies": {
+        "@atlaskit/theme": "^11.0.2",
+        "@emotion/styled": "^11.0.0"
     }
 }
