--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.8",
     "bootstrap": "^4.5.3",
     "immer": "^8.0.0",
+    "parse-md": "^2.0.4",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.4.0",
