--- a/app/package.json
+++ b/app/package.json
@@ -3,24 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@atlaskit/theme": "^11.0.2",
     "@emotion/styled": "^11.0.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "bootstrap": "^4.5.3",
     "immer": "^8.0.0",
     "parse-md": "^2.0.4",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
-    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
     "recoil": "^0.1.2",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
@@ -53,8 +46,12 @@
   },
   "devDependencies": {
     "@babel/parser": "^7.12.11",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/styled-components": "^5.1.7",
-    "eslint-plugin-jest": "^24.1.3"
+    "eslint-plugin-jest": "^24.1.3",
+    "react-scripts": "4.0.1"
   }
 }
